@@ -1,11 +1,11 @@
-README - 05/19/2005
+README - 08/10/2005
 -------------------
 
 
 INTRODUCTION
 
     This README file describes the Mini-XML library version
-    2.2.2.
+    2.2.4.
 
     Mini-XML is a small XML parsing library that you can use to
     read XML and XML-like data files in your application without
